Vivi's commit fixing the right button and scrollbar.

--- a/css/floativ.css
+++ b/css/floativ.css
@@ -15,21 +15,32 @@
     margin: auto;
 }
 
+.floativ-body {
+    padding: 18px 28px;
+}
+
 .floativ-head {
     width: 21px;
     position: absolute;
-    right: -30px;
+    right: -3px;
     top: 8px;
-    z-index: 1;
+    z-index: 1000!important;
 }
 
-.floativ-head button {
+.floativ-head span i {
     width: 21px;
     height: 21px;
     display: block;
     margin: 0 auto;
     text-decoration: none;
-    font-weight: bold
+    font-weight: bold;
+    z-index: 1000!important;
+}
+
+.floativ-expand,
+.floativ-collapse {
+    position: fixed;
+    cursor: pointer;
 }
 
 .shadow {
@@ -42,11 +53,32 @@
     margin-top: 10px;
     margin-left: 10px;
 }
+
+.mCustomScrollBox {
+    /* contains plugin's markup */
+    
+    position: relative;
+    overflow: hidden;
+    max-width: 100%;
+    height: 100%;
+    outline: none;
+    direction: ltr;
+}
+
+.mCSB_container {
+    /* contains the original content */
+    
+    position: absolute;
+    overflow: hidden;
+    width: 100%;
+    height: auto;
+}
+
 .mCSB_scrollTools .mCSB_draggerContainer {
-  position: absolute;
-  top: 20px;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  height: auto;
+    position: absolute;
+    top: 20px;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    height: auto;
 }
